--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,6 +71,8 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Montserrat", sans-serif;
+  overflow-x: hidden;
+  min-height: 100vh;
 }
 
 a {
