--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -68,13 +68,23 @@
 .header {
   max-width: 100vw;
   background-color: var(--black80);
-  justify-content: space-between;
-  padding: calc(1.5 * var(--padding-one)) calc(3 * var(--margin-one));
+  justify-content: space-around;
+  padding: calc(1.5 * var(--padding-one)) 0;
 }
 
 .navbar {
   gap: var(--margin-one);
   font-size: var(--h4);
+}
+
+.navbar>li{
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.rotateContainer{
+  display: none;
 }
 
 /* -------------------------------------HEADER CONTENT------------------------- */
@@ -133,13 +143,67 @@
   font-size: var(--h6-p);
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 780px) {
   .content {
     flex-direction: column;
     gap: calc(2 * var(--margin-one));
     padding-top: calc(69px + var(--margin-one));
+    pointer-events: none;
   }
   .contentList > li > p {
     font-size: calc(3 - var(--h6-p));
+  }
+  @media screen and (max-width: 650px){
+    .header{
+      justify-content: space-between;
+      padding-left: var(--margin-one);
+      padding-right: var(--margin-one);
+    }
+    .rotateContainer{
+      display: inherit;
+    }
+    .rotate, .menu{
+      transition: transform 300ms cubic-bezier(0.075, 0.82, 0.165, 1),
+      d 300ms ease-in-out, opacity 300ms ease-out;
+    }
+    .menu{
+      transform: rotate(45deg);
+    }
+    .menu > g > path:nth-child(1) {
+      d: path("M16 3 L16 29");
+    }
+    
+    .menu > g > path:nth-child(2) {
+      d: path("M3 16 L29 16");
+    }
+    .navbarCtn{
+      position: fixed;
+      min-width: 250px;
+      max-width: max(400px, 50vw);
+      height: calc(100vh - 69px);
+      top: 68px;
+      right: 0;
+      transform: translateX(100%);
+      transition: transform 300ms linear;
+      background-color: var(--black80);
+      z-index: 1;
+    }
+    .reveal{
+      transform: translateX(0);
+    }
+
+    .navbar{
+      flex-direction: column;
+      height: 100%;
+      width: 100%;
+      padding-top: calc(3 * var(--margin-one));
+      gap: 0;
+    }
+    .navbar>li{
+      padding: var(--padding-one) 0;
+    }
+    .navbar>li:hover{
+      background-color: var(--color-secondary);
+    }
   }
 }
