--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,12 @@
 @font-face {
   font-family: "Montserrat";
+  src: local("Montserrat"), url(./fonts/montserrat/Montserrat-ExtraLight.woff);
+  font-weight: 200;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
   src: local("Montserrat"), url(./fonts/montserrat/Montserrat-Regular.woff);
   font-weight: 400;
   font-display: swap;
@@ -9,6 +16,13 @@
   font-family: "Montserrat";
   src: local("Montserrat"), url(./fonts/montserrat/Montserrat-Medium.woff);
   font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: local("Montserrat"), url(./fonts/montserrat/Montserrat-SemiBold.woff);
+  font-weight: 600;
   font-display: swap;
 }
 
