--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -176,7 +176,7 @@
       position: fixed;
       min-width: 250px;
       max-width: max(400px, 50vw);
-      height: calc(100vh - 69px);
+      height: calc(100% - 69px);
       top: 68px;
       right: 0;
       transform: translateX(100%);
