--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.2rem 5rem;
+  padding: 1.2rem var(--global-padding);
   position: sticky;
   top: 0;
   left: 0;
