--- a/styles/hero.module.css
+++ b/styles/hero.module.css
@@ -1,23 +1,24 @@
 .hero {
   min-width: 100vw;
-  padding: 0 5rem;
+  padding: 0 var(--global-padding);
 
   display: flex;
   flex-wrap: wrap;
-  gap: 2rem;
   align-items: center;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .hero_container {
   display: grid;
   gap: 1rem;
   flex-grow: 999;
-  flex-basis: calc(100% / 3 * 2)
+  max-width: clamp(40rem, 60vw, 100%);
 }
 
 .hero__title {
-  font-size: 3rem;
-  line-height: 3.8rem;
+  font-size: clamp(2rem, 5vw, 3rem);
+  line-height: clamp(2.8rem, 5.8vw, 3.8rem);
   font-weight: 700;
 }
 
@@ -31,7 +32,7 @@
 }
 
 .img_container {
-  flex-basis: min(20rem, 80vw);
+  max-width: clamp(15rem, 300px, 60vw);
   flex-grow: 1;
   position: relative;
   z-index: -1;
@@ -40,6 +41,6 @@
 .buttons__container {
   display: flex;
   gap: 2rem;
-  margin-top: 2rem;
+  margin-top: clamp(1rem, 3vw, 2rem);
   align-items: center;
 }
