--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,37 @@
 :root {
   --black: #202020;
-  --white: #fff;
-  --primary-color: #DACBFB;
-  --secondary-color: #B1D4B5;
-  --tertiary-color: #FED6D0;
-  --primary-color-shadow: #b2a9c7;
+  --linear-black-gradient: linear-gradient(180deg, #212121cc, var(--black));
+  --white: #ffffff;
+  --grey: #666666;
 
-  --font-size-title: clamp(1.3rem, 2vw, 1.7rem);
-  --font-size-subtitle: clamp(1.1rem, 1.8vw, 1.5rem);
-  --line-height-title: clamp(1.7rem, 2.4vw, 2.1rem);
-  --line-height-subtitle: clamp(1.4rem, 2.1vw, 1.9rem);
+  /* gradients */
+  --primary-gradient: linear-gradient(90deg, #007CF0 0%, #00DFD8 100%);
+  --primary-gradient-shadow: linear-gradient(180deg, #01AFE4 23.55%, transparent 100%);
+  --secondary-gradient: linear-gradient(90deg, #7928CA 0%, #FF0080 100%);
+  --secondary-gradient-shadow: linear-gradient(180deg, #BE14A4 23.55%, transparent 100%);
+  --tertiary-gradient: linear-gradient(90deg, #FF4D4D 0%, #F9CB28 100%);
+  --tertiary-gradient-shadow: linear-gradient(180deg, #FC8B3B 23.55%, transparent 100%);
 
-  --global-padding: clamp(1rem, 4vw, 5rem);
+  /* font sizes */
+  --font-size-xl: 2.5rem;
+  --font-size-l: 1.5rem;
+  --font-size-m: 1.2rem;
+  --font-size-s: 1rem;
+  --font-size-xs: 0.8rem;
+
+  /* font weights */
+  --font-weight-bold: 800;
+  --font-weight-medium: 500;
+  --font-weight-regular: 400;
+
+  /* global padding */
+  --global-padding: clamp(var(--font-size-s), 5vw, var(--font-size-m));
+
+  /* global border radius */
+  --global-border-radius: .3rem;
+
+  /* global box shadow */
+  --global-box-shadow: 0px 0px 40px;
 
   font-size: 16px;
 }
@@ -67,7 +87,6 @@ h4,
 h5,
 h6,
 p,
-span,
 a,
 strong,
 blockquote,
@@ -80,15 +99,6 @@ em {
   font-style: inherit;
   text-decoration: none;
   color: inherit;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 600;
 }
 
 ::-moz-selection,
@@ -117,11 +127,6 @@ label {
   -webkit-hyphens: auto;
 }
 
-body,
-.global__container {
-  min-height: 100vh;
-}
-
 body {
   font-size: 100%;
   color: var(--black);
@@ -133,12 +138,4 @@ body {
   -webkit-hyphens: auto;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-}
-
-.global__container {
-  display: flex;
-  gap: clamp(1.5rem, 5vw, 3rem);
-  flex-direction: column;
-  background: linear-gradient(180deg, #FFFFFF 0%, #E5D9FF 100%);
-  padding-bottom: clamp(1.5rem, 5vw, 3rem);
 }
