--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.2rem var(--global-padding);
+  padding: 1.2rem 0;
   position: sticky;
   top: 0;
   left: 0;
@@ -17,6 +17,5 @@
 
 .link {
   color: var(--black);
-  font-weight: 600;
-  font-size: 14px;
+  font-size: 1.1rem;
 }
