--- a/styles/story.module.css
+++ b/styles/story.module.css
@@ -66,18 +66,6 @@
   align-items: center;
 }
 
-.member_card {
-  padding: .5rem;
-  border-radius: var(--team-border-radius);
-  width: clamp(12rem, 25vw, 15rem);
-  filter: grayscale(1);
-  overflow: hidden;
-  transition: filter 0.3s ease-in-out;
-  border: 1px solid transparent;
-  background-color: var(--white);
-  background-clip: padding-box;
-}
-
 .member_card_container {
   position: relative;
 }
@@ -85,23 +73,28 @@
 .gradient {
   position: absolute;
   inset: 0;
-  filter: blur(10px);
-}
-
-.gradient::before {
-  content: '';
-  position: absolute;
-  inset: 0;
-  background-image: var(--primary-gradient);
   opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-  z-index: -1;
+  box-shadow: 0 0 1rem var(--grey-shadow);
   border-radius: var(--team-border-radius);
+  transition: opacity 300ms ease-in-out;
 }
 
-.member_card_container:hover>.gradient::before {
-  opacity: 0.3;
+.member_card_container:hover>.gradient {
+  opacity: 1;
 }
+
+.member_card {
+  padding: .5rem;
+  border-radius: var(--team-border-radius);
+  width: clamp(12rem, 25vw, 15rem);
+  filter: grayscale(1);
+  overflow: hidden;
+  transition: filter 300ms ease-in-out;
+  border: 1px solid transparent;
+  background-color: var(--white);
+  background-clip: padding-box;
+}
+
 
 .member_card:hover {
   filter: grayscale(0);
@@ -111,6 +104,8 @@
   width: 100%;
   overflow: hidden;
   border-radius: calc(var(--team-border-radius) - 0.2rem);
+  pointer-events: none;
+  user-select: none;
 }
 
 .member_image {
