Fix:eslint and react alerts

--- a/styles/motivate.module.css
+++ b/styles/motivate.module.css
@@ -43,6 +43,10 @@
   border-radius: calc(var(--team-border-radius) - 0.2rem);
 }
 
+.image_container>h3 {
+  font-weight: 600;
+}
+
 @media screen and (max-width: 35rem) {
   .image_container {
     transform: rotate(0);
