--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,13 +1,24 @@
 .header {
-  background-color: var(--white);
+  background-color: var(--white-shadow);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.2rem 0;
+  padding: 0 5rem;
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
+  backdrop-filter: saturate(180%) blur(.4rem);
+  min-height: var(--header-height);
+}
+
+.header_mobile,
+.links__container_mobile {
+  display: none;
+}
+
+.margin {
+  border-bottom: 1px solid #d9d9d988;
 }
 
 .links__container {
@@ -17,5 +28,96 @@
 
 .link {
   color: var(--black);
-  font-size: 1.1rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 720px) {
+  .header {
+    padding: 0 1rem;
+  }
+}
+
+.icon {
+  width: 2rem;
+  height: 2rem;
+  position: relative;
+  transition: transform 300ms ease;
+  z-index: 2;
+}
+
+.icon::after,
+.icon::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: var(--grey);
+  top: 30%;
+  left: 0;
+  transform: translateY(-30%);
+  transition: transform 300ms ease;
+}
+
+.icon::after {
+  top: 70%;
+  transform: translateY(-70%);
+}
+
+.rotate>.icon::after,
+.rotate>.icon::before {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.rotate>.icon {
+  transform: rotate(45deg);
+}
+
+.rotate>.icon::before {
+  transform: rotate(90deg);
+}
+
+.links__container_mobile {
+  position: absolute;
+  top: calc(var(--header-height) - 1px);
+  right: 0;
+  height: 100vh;
+  backdrop-filter: saturate(180%) blur(.5rem);
+  background-color: var(--white-shadow);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  width: 100%;
+  opacity: 0;
+  transition: opacity 300ms ease;
+}
+
+.show_links {
+  opacity: 1;
+}
+
+.overflow {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  min-height: 100%;
+  max-width: 100vw;
+}
+
+@media screen and (max-width: 550px) {
+  .links__container {
+    display: none;
+  }
+
+  .header_mobile,
+  .links__container_mobile {
+    display: flex;
+  }
+
+  .header {
+    backdrop-filter: inherit;
+    background-color: var(--white);
+  }
 }
