--- a/styles/motivate.module.css
+++ b/styles/motivate.module.css
@@ -47,7 +47,7 @@
   font-weight: 600;
 }
 
-@media screen and (max-width: 35rem) {
+@media screen and (max-width: 560px) {
   .image_container {
     transform: rotate(0);
   }
@@ -69,7 +69,6 @@
   height: 100%;
   width: 5rem;
   background: linear-gradient(to right, var(--white), transparent);
-  z-index: 1;
 }
 
 .testimonials_shadows_container::after {
