--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -98,6 +98,13 @@
   opacity: 1;
 }
 
+.overflow {
+  width: 100%;
+  overflow: hidden;
+  min-height: 100%;
+  max-width: 100vw;
+}
+
 @media screen and (max-width: 550px) {
   .links__container {
     display: none;
