--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -95,10 +95,13 @@
   width: 100%;
   opacity: 0;
   transition: opacity 300ms ease;
+  pointer-events: none;
+  user-select: none;
 }
 
 .show_links {
   opacity: 1;
+  pointer-events: inherit;
 }
 
 .overflow {
