--- a/styles/plans.module.css
+++ b/styles/plans.module.css
@@ -114,3 +114,11 @@
   font-weight: var(--font-weight-medium);
   text-align: center;
 }
+
+@media screen and (max-width: 560px) {
+
+  .header,
+  .benefits {
+    padding: 2rem 1.7rem 1.7rem;
+  }
+}
