--- a/styles/plans.module.css
+++ b/styles/plans.module.css
@@ -15,6 +15,8 @@
   margin: calc(var(--margin-separator) * .7) 0;
   text-align: center;
   position: relative;
+  user-select: none;
+  pointer-events: none;
 }
 
 .title_xl::before {
